--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "audiolabs/bibtexparser",
+    "name": "flatplane/bibtexparser",
     "type": "library",
     "description": "Bibtex parser for PHP 5.3",
     "keywords": ["bibtex","latex","parsing"],
-    "homepage": "http://github.com/alabs/bibtexparser",
+    "homepage": "https://github.com/Gefrierbrand/bibtexparser",
     "license": "MIT",
     "authors": [
         {
@@ -22,8 +22,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "AudioLabs":"src/"
-        }
+        "psr-4": {"de\\flatplane\\": "src/"}
     }
 }
