--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,6 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-4": {"de\\flatplane\\": "src/"}
+        "psr-4": {"de\\flatplane\\": "classes/"}
     }
 }
